Fixed overflow scroll on friends list

--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -119,6 +119,8 @@ body {
   margin: 5px;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .friend:hover {
